# gitchangelog

./: .coveragerc  .flake8  .gitchangelog.rc  .gitignore  .pep8speaks.yml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  codecov.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  coverage.yml  pylint.yml  release.yml  sphinx.yml  wheel-check.sh
docs/source/: conf.py  index.rst
src/gitchangelog/: __init__.py  gitchangelog.py  gitchangelog.rc.github.release  gitchangelog.rc.reference  gitchangelog.rc.reference.v2.1.3  github_helper.py
test/: common.py  test_base.py  test_exc_handling.py  test_template.py
